%% ERD: Task & Marketplace Domain (Logical)
%% Updated 2026-07-14 (Audit Fix)
%% Note: The database does NOT enforce these relationships via physical Foreign Keys.
%% These are logical, application-enforced relationships.
erDiagram
    task_statuses {
        UUID id PK
        UUID organization_id FK
        VARCHAR name
        VARCHAR slug UK
        VARCHAR category "todo/in_progress/done/cancelled"
        VARCHAR color
        VARCHAR icon
        VARCHAR description
        INT sort_order
        BOOLEAN is_default
        BOOLEAN is_system
        TIMESTAMPTZ deleted_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    task_workflow_transitions {
        UUID id PK
        UUID organization_id FK
        UUID from_status_id FK
        UUID to_status_id FK
        JSONB conditions
        TIMESTAMPTZ created_at
    }

    tasks {
        UUID id PK
        VARCHAR title
        TEXT description
        VARCHAR status
        UUID task_status_id FK
        VARCHAR label
        VARCHAR priority
        VARCHAR difficulty
        UUID assigned_to FK
        UUID creator_id FK
        UUID updated_by FK
        TIMESTAMPTZ due_date
        UUID parent_task_id FK
        NUMERIC estimated_time
        NUMERIC actual_time
        UUID organization_id FK
        UUID project_id FK
        UUID project_sprint_id FK
        VARCHAR task_visibility
        TIMESTAMPTZ application_deadline
        VARCHAR task_type
        TEXT acceptance_criteria
        VARCHAR verification_method
        JSONB expected_deliverables
        TEXT context_background
        TEXT impact_scope
        JSONB tech_stack
        VARCHAR environment
        VARCHAR collaboration_type
        TEXT complexity_notes
        JSONB measurable_outcomes
        JSONB learning_objectives
        JSONB domain_tags
        VARCHAR role_in_task
        VARCHAR autonomy_level
        VARCHAR problem_category
        VARCHAR business_domain
        INT estimated_users_affected
        INT external_applications_count
        INT sort_order
        TIMESTAMPTZ deleted_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    task_versions {
        UUID id PK
        UUID task_id FK
        VARCHAR title
        TEXT description
        VARCHAR status
        VARCHAR label
        VARCHAR priority
        VARCHAR difficulty
        UUID assigned_to FK
        UUID changed_by FK
        TIMESTAMPTZ changed_at
    }

    task_applications {
        UUID id PK
        UUID task_id FK
        UUID applicant_id FK
        VARCHAR application_status
        VARCHAR application_source
        TEXT message
        JSONB portfolio_links
        UUID reviewed_by FK
        VARCHAR rejection_reason
        TIMESTAMPTZ applied_at
        TIMESTAMPTZ reviewed_at
    }

    task_assignments {
        UUID id PK
        UUID task_id FK
        UUID assignee_id FK
        UUID assigned_by FK
        VARCHAR assignment_type
        VARCHAR assignment_status
        NUMERIC estimated_hours
        NUMERIC actual_hours
        INT progress_percentage
        TEXT completion_notes
        UUID verified_by FK
        TIMESTAMPTZ verified_at
        TIMESTAMPTZ assigned_at
        TIMESTAMPTZ completed_at
    }

    task_required_skills {
        UUID id PK
        UUID task_id FK
        UUID skill_id FK
        VARCHAR required_level_code
        BOOLEAN is_mandatory
        TIMESTAMPTZ created_at
    }

    %% Application-enforced relationships
    organizations ||--o{ task_statuses : "defines"
    organizations ||--o{ task_workflow_transitions : "defines"
    task_statuses ||--o{ task_workflow_transitions : "from/to"
    task_statuses ||--o{ tasks : "is in status"
    projects ||--o{ tasks : "contains"
    project_sprints ||--o{ tasks : "groups sprint tasks"
    tasks ||--o{ tasks : "parent/subtask"
    tasks ||--o{ task_versions : "has history"
    tasks ||--o{ task_applications : "receives"
    tasks ||--o{ task_assignments : "has assignment"
    tasks ||--o{ task_required_skills : "requires"
    
    users ||--o{ task_applications : "applies"
    users ||--o{ task_assignments : "is assigned to"
    users ||--o{ tasks : "creates/updates"
    skills ||--o{ task_required_skills : "is required"
